build/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> ID DEFINITIONS EQUALS BEGIN structs END
Rule 2     statement -> ID DEFINITIONS AUTOMATIC TAGS EQUALS BEGIN structs END
Rule 3     statement -> ID LBRACE arcs RBRACE DEFINITIONS AUTOMATIC TAGS EQUALS BEGIN structs END
Rule 4     arcs -> arc arcs
Rule 5     arcs -> arc
Rule 6     arc -> ID
Rule 7     arc -> ID LPAR NUMBER RPAR
Rule 8     arc -> NUMBER
Rule 9     structs -> struct
Rule 10    structs -> struct structs
Rule 11    structs -> COMMENT
Rule 12    idlist -> ID
Rule 13    idlist -> ID VIRG idlist
Rule 14    struct -> ID EQUALS sequence
Rule 15    struct -> ID EQUALS enumerated
Rule 16    struct -> ID EQUALS type
Rule 17    struct -> ID EQUALS type extra
Rule 18    struct -> IMPORTS imports HCOMMA
Rule 19    struct -> EXPORTS idlist HCOMMA
Rule 20    struct -> ID EQUALS set
Rule 21    imports -> import imports
Rule 22    imports -> import
Rule 23    import -> idlist FROM ID
Rule 24    sequence -> SEQUENCE LBRACE fields RBRACE
Rule 25    set -> SET LBRACE fields RBRACE
Rule 26    enumerated -> ENUMERATED LBRACE emembers RBRACE
Rule 27    emembers -> emember VIRG emembers
Rule 28    emembers -> emember
Rule 29    emember -> ID
Rule 30    emember -> ID LPAR NUMBER RPAR
Rule 31    fields -> member VIRG fields
Rule 32    fields -> member
Rule 33    member -> ID type
Rule 34    member -> ID type extra
Rule 35    member -> ID sequence
Rule 36    member -> ID sequence extra
Rule 37    member -> ID set
Rule 38    member -> ID set extra
Rule 39    member -> ID enumerated
Rule 40    member -> ID enumerated extra
Rule 41    extra -> size
Rule 42    extra -> size OPTIONAL
Rule 43    extra -> OPTIONAL
Rule 44    size -> LPAR SIZE LPAR NUMBER RPAR RPAR
Rule 45    size -> LPAR SIZE LPAR NUMBER DOT DOT NUMBER RPAR RPAR
Rule 46    type -> TSTRING
Rule 47    type -> OCTET STRING
Rule 48    type -> BIT STRING
Rule 49    type -> INTEGER
Rule 50    type -> INTEGER range
Rule 51    range -> LPAR NUMBER DOT DOT NUMBER RPAR
Rule 52    range -> LPAR MIN DOT DOT NUMBER RPAR
Rule 53    range -> LPAR NUMBER DOT DOT MAX RPAR
Rule 54    range -> LPAR MIN DOT DOT MAX RPAR
Rule 55    type -> BOOLEAN
Rule 56    type -> SET OF type
Rule 57    type -> SEQUENCE OF type
Rule 58    type -> OBJECT IDENTIFIER
Rule 59    type -> ROID
Rule 60    type -> CHOICE LBRACE fields RBRACE
Rule 61    type -> ID
Rule 62    type -> NULL
Rule 63    type -> UTCTIME

Terminals, with rules where they appear

AUTOMATIC            : 2 3
BEGIN                : 1 2 3
BIT                  : 48
BOOLEAN              : 55
CHOICE               : 60
COMMENT              : 11
DEFINITIONS          : 1 2 3
DOT                  : 45 45 51 51 52 52 53 53 54 54
END                  : 1 2 3
ENUMERATED           : 26
EQUALS               : 1 2 3 14 15 16 17 20
EXPORTS              : 19
FROM                 : 23
HCOMMA               : 18 19
ID                   : 1 2 3 6 7 12 13 14 15 16 17 20 23 29 30 33 34 35 36 37 38 39 40 61
IDENTIFIER           : 58
IMPORTS              : 18
INTEGER              : 49 50
LBRACE               : 3 24 25 26 60
LPAR                 : 7 30 44 44 45 45 51 52 53 54
MAX                  : 53 54
MIN                  : 52 54
NULL                 : 62
NUMBER               : 7 8 30 44 45 45 51 51 52 53
OBJECT               : 58
OCTET                : 47
OF                   : 56 57
OPTIONAL             : 42 43
RBRACE               : 3 24 25 26 60
ROID                 : 59
RPAR                 : 7 30 44 44 45 45 51 52 53 54
SEQUENCE             : 24 57
SET                  : 25 56
SIZE                 : 44 45
STRING               : 47 48
TAGS                 : 2 3
TSTRING              : 46
UTCTIME              : 63
VIRG                 : 13 27 31
error                : 

Nonterminals, with rules where they appear

arc                  : 4 5
arcs                 : 3 4
emember              : 27 28
emembers             : 26 27
enumerated           : 15 39 40
extra                : 17 34 36 38 40
fields               : 24 25 31 60
idlist               : 13 19 23
import               : 21 22
imports              : 18 21
member               : 31 32
range                : 50
sequence             : 14 35 36
set                  : 20 37 38
size                 : 41 42
statement            : 0
struct               : 9 10
structs              : 1 2 3 10
type                 : 16 17 33 34 56 57

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . ID DEFINITIONS EQUALS BEGIN structs END
    (2) statement -> . ID DEFINITIONS AUTOMATIC TAGS EQUALS BEGIN structs END
    (3) statement -> . ID LBRACE arcs RBRACE DEFINITIONS AUTOMATIC TAGS EQUALS BEGIN structs END

    ID              shift and go to state 1

    statement                      shift and go to state 2

state 1

    (1) statement -> ID . DEFINITIONS EQUALS BEGIN structs END
    (2) statement -> ID . DEFINITIONS AUTOMATIC TAGS EQUALS BEGIN structs END
    (3) statement -> ID . LBRACE arcs RBRACE DEFINITIONS AUTOMATIC TAGS EQUALS BEGIN structs END

    DEFINITIONS     shift and go to state 4
    LBRACE          shift and go to state 3


state 2

    (0) S' -> statement .



state 3

    (3) statement -> ID LBRACE . arcs RBRACE DEFINITIONS AUTOMATIC TAGS EQUALS BEGIN structs END
    (4) arcs -> . arc arcs
    (5) arcs -> . arc
    (6) arc -> . ID
    (7) arc -> . ID LPAR NUMBER RPAR
    (8) arc -> . NUMBER

    ID              shift and go to state 8
    NUMBER          shift and go to state 6

    arc                            shift and go to state 7
    arcs                           shift and go to state 5

state 4

    (1) statement -> ID DEFINITIONS . EQUALS BEGIN structs END
    (2) statement -> ID DEFINITIONS . AUTOMATIC TAGS EQUALS BEGIN structs END

    EQUALS          shift and go to state 9
    AUTOMATIC       shift and go to state 10


state 5

    (3) statement -> ID LBRACE arcs . RBRACE DEFINITIONS AUTOMATIC TAGS EQUALS BEGIN structs END

    RBRACE          shift and go to state 11


state 6

    (8) arc -> NUMBER .

    ID              reduce using rule 8 (arc -> NUMBER .)
    NUMBER          reduce using rule 8 (arc -> NUMBER .)
    RBRACE          reduce using rule 8 (arc -> NUMBER .)


state 7

    (4) arcs -> arc . arcs
    (5) arcs -> arc .
    (4) arcs -> . arc arcs
    (5) arcs -> . arc
    (6) arc -> . ID
    (7) arc -> . ID LPAR NUMBER RPAR
    (8) arc -> . NUMBER

    RBRACE          reduce using rule 5 (arcs -> arc .)
    ID              shift and go to state 8
    NUMBER          shift and go to state 6

    arc                            shift and go to state 7
    arcs                           shift and go to state 12

state 8

    (6) arc -> ID .
    (7) arc -> ID . LPAR NUMBER RPAR

    ID              reduce using rule 6 (arc -> ID .)
    NUMBER          reduce using rule 6 (arc -> ID .)
    RBRACE          reduce using rule 6 (arc -> ID .)
    LPAR            shift and go to state 13


state 9

    (1) statement -> ID DEFINITIONS EQUALS . BEGIN structs END

    BEGIN           shift and go to state 14


state 10

    (2) statement -> ID DEFINITIONS AUTOMATIC . TAGS EQUALS BEGIN structs END

    TAGS            shift and go to state 15


state 11

    (3) statement -> ID LBRACE arcs RBRACE . DEFINITIONS AUTOMATIC TAGS EQUALS BEGIN structs END

    DEFINITIONS     shift and go to state 16


state 12

    (4) arcs -> arc arcs .

    RBRACE          reduce using rule 4 (arcs -> arc arcs .)


state 13

    (7) arc -> ID LPAR . NUMBER RPAR

    NUMBER          shift and go to state 17


state 14

    (1) statement -> ID DEFINITIONS EQUALS BEGIN . structs END
    (9) structs -> . struct
    (10) structs -> . struct structs
    (11) structs -> . COMMENT
    (14) struct -> . ID EQUALS sequence
    (15) struct -> . ID EQUALS enumerated
    (16) struct -> . ID EQUALS type
    (17) struct -> . ID EQUALS type extra
    (18) struct -> . IMPORTS imports HCOMMA
    (19) struct -> . EXPORTS idlist HCOMMA
    (20) struct -> . ID EQUALS set

    COMMENT         shift and go to state 18
    ID              shift and go to state 23
    IMPORTS         shift and go to state 20
    EXPORTS         shift and go to state 22

    struct                         shift and go to state 19
    structs                        shift and go to state 21

state 15

    (2) statement -> ID DEFINITIONS AUTOMATIC TAGS . EQUALS BEGIN structs END

    EQUALS          shift and go to state 24


state 16

    (3) statement -> ID LBRACE arcs RBRACE DEFINITIONS . AUTOMATIC TAGS EQUALS BEGIN structs END

    AUTOMATIC       shift and go to state 25


state 17

    (7) arc -> ID LPAR NUMBER . RPAR

    RPAR            shift and go to state 26


state 18

    (11) structs -> COMMENT .

    END             reduce using rule 11 (structs -> COMMENT .)


state 19

    (9) structs -> struct .
    (10) structs -> struct . structs
    (9) structs -> . struct
    (10) structs -> . struct structs
    (11) structs -> . COMMENT
    (14) struct -> . ID EQUALS sequence
    (15) struct -> . ID EQUALS enumerated
    (16) struct -> . ID EQUALS type
    (17) struct -> . ID EQUALS type extra
    (18) struct -> . IMPORTS imports HCOMMA
    (19) struct -> . EXPORTS idlist HCOMMA
    (20) struct -> . ID EQUALS set

    END             reduce using rule 9 (structs -> struct .)
    COMMENT         shift and go to state 18
    ID              shift and go to state 23
    IMPORTS         shift and go to state 20
    EXPORTS         shift and go to state 22

    struct                         shift and go to state 19
    structs                        shift and go to state 27

state 20

    (18) struct -> IMPORTS . imports HCOMMA
    (21) imports -> . import imports
    (22) imports -> . import
    (23) import -> . idlist FROM ID
    (12) idlist -> . ID
    (13) idlist -> . ID VIRG idlist

    ID              shift and go to state 31

    imports                        shift and go to state 29
    idlist                         shift and go to state 28
    import                         shift and go to state 30

state 21

    (1) statement -> ID DEFINITIONS EQUALS BEGIN structs . END

    END             shift and go to state 32


state 22

    (19) struct -> EXPORTS . idlist HCOMMA
    (12) idlist -> . ID
    (13) idlist -> . ID VIRG idlist

    ID              shift and go to state 31

    idlist                         shift and go to state 33

state 23

    (14) struct -> ID . EQUALS sequence
    (15) struct -> ID . EQUALS enumerated
    (16) struct -> ID . EQUALS type
    (17) struct -> ID . EQUALS type extra
    (20) struct -> ID . EQUALS set

    EQUALS          shift and go to state 34


state 24

    (2) statement -> ID DEFINITIONS AUTOMATIC TAGS EQUALS . BEGIN structs END

    BEGIN           shift and go to state 35


state 25

    (3) statement -> ID LBRACE arcs RBRACE DEFINITIONS AUTOMATIC . TAGS EQUALS BEGIN structs END

    TAGS            shift and go to state 36


state 26

    (7) arc -> ID LPAR NUMBER RPAR .

    ID              reduce using rule 7 (arc -> ID LPAR NUMBER RPAR .)
    NUMBER          reduce using rule 7 (arc -> ID LPAR NUMBER RPAR .)
    RBRACE          reduce using rule 7 (arc -> ID LPAR NUMBER RPAR .)


state 27

    (10) structs -> struct structs .

    END             reduce using rule 10 (structs -> struct structs .)


state 28

    (23) import -> idlist . FROM ID

    FROM            shift and go to state 37


state 29

    (18) struct -> IMPORTS imports . HCOMMA

    HCOMMA          shift and go to state 38


state 30

    (21) imports -> import . imports
    (22) imports -> import .
    (21) imports -> . import imports
    (22) imports -> . import
    (23) import -> . idlist FROM ID
    (12) idlist -> . ID
    (13) idlist -> . ID VIRG idlist

    HCOMMA          reduce using rule 22 (imports -> import .)
    ID              shift and go to state 31

    import                         shift and go to state 30
    idlist                         shift and go to state 28
    imports                        shift and go to state 39

state 31

    (12) idlist -> ID .
    (13) idlist -> ID . VIRG idlist

    FROM            reduce using rule 12 (idlist -> ID .)
    HCOMMA          reduce using rule 12 (idlist -> ID .)
    VIRG            shift and go to state 40


state 32

    (1) statement -> ID DEFINITIONS EQUALS BEGIN structs END .

    $end            reduce using rule 1 (statement -> ID DEFINITIONS EQUALS BEGIN structs END .)


state 33

    (19) struct -> EXPORTS idlist . HCOMMA

    HCOMMA          shift and go to state 41


state 34

    (14) struct -> ID EQUALS . sequence
    (15) struct -> ID EQUALS . enumerated
    (16) struct -> ID EQUALS . type
    (17) struct -> ID EQUALS . type extra
    (20) struct -> ID EQUALS . set
    (24) sequence -> . SEQUENCE LBRACE fields RBRACE
    (26) enumerated -> . ENUMERATED LBRACE emembers RBRACE
    (46) type -> . TSTRING
    (47) type -> . OCTET STRING
    (48) type -> . BIT STRING
    (49) type -> . INTEGER
    (50) type -> . INTEGER range
    (55) type -> . BOOLEAN
    (56) type -> . SET OF type
    (57) type -> . SEQUENCE OF type
    (58) type -> . OBJECT IDENTIFIER
    (59) type -> . ROID
    (60) type -> . CHOICE LBRACE fields RBRACE
    (61) type -> . ID
    (62) type -> . NULL
    (63) type -> . UTCTIME
    (25) set -> . SET LBRACE fields RBRACE

    SEQUENCE        shift and go to state 54
    ENUMERATED      shift and go to state 59
    TSTRING         shift and go to state 45
    OCTET           shift and go to state 55
    BIT             shift and go to state 52
    INTEGER         shift and go to state 51
    BOOLEAN         shift and go to state 58
    SET             shift and go to state 47
    OBJECT          shift and go to state 43
    ROID            shift and go to state 48
    CHOICE          shift and go to state 56
    ID              shift and go to state 57
    NULL            shift and go to state 46
    UTCTIME         shift and go to state 44

    set                            shift and go to state 42
    sequence                       shift and go to state 49
    enumerated                     shift and go to state 50
    type                           shift and go to state 53

state 35

    (2) statement -> ID DEFINITIONS AUTOMATIC TAGS EQUALS BEGIN . structs END
    (9) structs -> . struct
    (10) structs -> . struct structs
    (11) structs -> . COMMENT
    (14) struct -> . ID EQUALS sequence
    (15) struct -> . ID EQUALS enumerated
    (16) struct -> . ID EQUALS type
    (17) struct -> . ID EQUALS type extra
    (18) struct -> . IMPORTS imports HCOMMA
    (19) struct -> . EXPORTS idlist HCOMMA
    (20) struct -> . ID EQUALS set

    COMMENT         shift and go to state 18
    ID              shift and go to state 23
    IMPORTS         shift and go to state 20
    EXPORTS         shift and go to state 22

    struct                         shift and go to state 19
    structs                        shift and go to state 60

state 36

    (3) statement -> ID LBRACE arcs RBRACE DEFINITIONS AUTOMATIC TAGS . EQUALS BEGIN structs END

    EQUALS          shift and go to state 61


state 37

    (23) import -> idlist FROM . ID

    ID              shift and go to state 62


state 38

    (18) struct -> IMPORTS imports HCOMMA .

    COMMENT         reduce using rule 18 (struct -> IMPORTS imports HCOMMA .)
    ID              reduce using rule 18 (struct -> IMPORTS imports HCOMMA .)
    IMPORTS         reduce using rule 18 (struct -> IMPORTS imports HCOMMA .)
    EXPORTS         reduce using rule 18 (struct -> IMPORTS imports HCOMMA .)
    END             reduce using rule 18 (struct -> IMPORTS imports HCOMMA .)


state 39

    (21) imports -> import imports .

    HCOMMA          reduce using rule 21 (imports -> import imports .)


state 40

    (13) idlist -> ID VIRG . idlist
    (12) idlist -> . ID
    (13) idlist -> . ID VIRG idlist

    ID              shift and go to state 31

    idlist                         shift and go to state 63

state 41

    (19) struct -> EXPORTS idlist HCOMMA .

    COMMENT         reduce using rule 19 (struct -> EXPORTS idlist HCOMMA .)
    ID              reduce using rule 19 (struct -> EXPORTS idlist HCOMMA .)
    IMPORTS         reduce using rule 19 (struct -> EXPORTS idlist HCOMMA .)
    EXPORTS         reduce using rule 19 (struct -> EXPORTS idlist HCOMMA .)
    END             reduce using rule 19 (struct -> EXPORTS idlist HCOMMA .)


state 42

    (20) struct -> ID EQUALS set .

    COMMENT         reduce using rule 20 (struct -> ID EQUALS set .)
    ID              reduce using rule 20 (struct -> ID EQUALS set .)
    IMPORTS         reduce using rule 20 (struct -> ID EQUALS set .)
    EXPORTS         reduce using rule 20 (struct -> ID EQUALS set .)
    END             reduce using rule 20 (struct -> ID EQUALS set .)


state 43

    (58) type -> OBJECT . IDENTIFIER

    IDENTIFIER      shift and go to state 64


state 44

    (63) type -> UTCTIME .

    OPTIONAL        reduce using rule 63 (type -> UTCTIME .)
    LPAR            reduce using rule 63 (type -> UTCTIME .)
    COMMENT         reduce using rule 63 (type -> UTCTIME .)
    ID              reduce using rule 63 (type -> UTCTIME .)
    IMPORTS         reduce using rule 63 (type -> UTCTIME .)
    EXPORTS         reduce using rule 63 (type -> UTCTIME .)
    END             reduce using rule 63 (type -> UTCTIME .)
    VIRG            reduce using rule 63 (type -> UTCTIME .)
    RBRACE          reduce using rule 63 (type -> UTCTIME .)


state 45

    (46) type -> TSTRING .

    OPTIONAL        reduce using rule 46 (type -> TSTRING .)
    LPAR            reduce using rule 46 (type -> TSTRING .)
    COMMENT         reduce using rule 46 (type -> TSTRING .)
    ID              reduce using rule 46 (type -> TSTRING .)
    IMPORTS         reduce using rule 46 (type -> TSTRING .)
    EXPORTS         reduce using rule 46 (type -> TSTRING .)
    END             reduce using rule 46 (type -> TSTRING .)
    VIRG            reduce using rule 46 (type -> TSTRING .)
    RBRACE          reduce using rule 46 (type -> TSTRING .)


state 46

    (62) type -> NULL .

    OPTIONAL        reduce using rule 62 (type -> NULL .)
    LPAR            reduce using rule 62 (type -> NULL .)
    COMMENT         reduce using rule 62 (type -> NULL .)
    ID              reduce using rule 62 (type -> NULL .)
    IMPORTS         reduce using rule 62 (type -> NULL .)
    EXPORTS         reduce using rule 62 (type -> NULL .)
    END             reduce using rule 62 (type -> NULL .)
    VIRG            reduce using rule 62 (type -> NULL .)
    RBRACE          reduce using rule 62 (type -> NULL .)


state 47

    (56) type -> SET . OF type
    (25) set -> SET . LBRACE fields RBRACE

    OF              shift and go to state 65
    LBRACE          shift and go to state 66


state 48

    (59) type -> ROID .

    OPTIONAL        reduce using rule 59 (type -> ROID .)
    LPAR            reduce using rule 59 (type -> ROID .)
    COMMENT         reduce using rule 59 (type -> ROID .)
    ID              reduce using rule 59 (type -> ROID .)
    IMPORTS         reduce using rule 59 (type -> ROID .)
    EXPORTS         reduce using rule 59 (type -> ROID .)
    END             reduce using rule 59 (type -> ROID .)
    VIRG            reduce using rule 59 (type -> ROID .)
    RBRACE          reduce using rule 59 (type -> ROID .)


state 49

    (14) struct -> ID EQUALS sequence .

    COMMENT         reduce using rule 14 (struct -> ID EQUALS sequence .)
    ID              reduce using rule 14 (struct -> ID EQUALS sequence .)
    IMPORTS         reduce using rule 14 (struct -> ID EQUALS sequence .)
    EXPORTS         reduce using rule 14 (struct -> ID EQUALS sequence .)
    END             reduce using rule 14 (struct -> ID EQUALS sequence .)


state 50

    (15) struct -> ID EQUALS enumerated .

    COMMENT         reduce using rule 15 (struct -> ID EQUALS enumerated .)
    ID              reduce using rule 15 (struct -> ID EQUALS enumerated .)
    IMPORTS         reduce using rule 15 (struct -> ID EQUALS enumerated .)
    EXPORTS         reduce using rule 15 (struct -> ID EQUALS enumerated .)
    END             reduce using rule 15 (struct -> ID EQUALS enumerated .)


state 51

    (49) type -> INTEGER .
    (50) type -> INTEGER . range
    (51) range -> . LPAR NUMBER DOT DOT NUMBER RPAR
    (52) range -> . LPAR MIN DOT DOT NUMBER RPAR
    (53) range -> . LPAR NUMBER DOT DOT MAX RPAR
    (54) range -> . LPAR MIN DOT DOT MAX RPAR

  ! shift/reduce conflict for LPAR resolved as shift
    OPTIONAL        reduce using rule 49 (type -> INTEGER .)
    COMMENT         reduce using rule 49 (type -> INTEGER .)
    ID              reduce using rule 49 (type -> INTEGER .)
    IMPORTS         reduce using rule 49 (type -> INTEGER .)
    EXPORTS         reduce using rule 49 (type -> INTEGER .)
    END             reduce using rule 49 (type -> INTEGER .)
    VIRG            reduce using rule 49 (type -> INTEGER .)
    RBRACE          reduce using rule 49 (type -> INTEGER .)
    LPAR            shift and go to state 67
